tests/lean/treeMap.lean.expected.out
treeMap.lean:8:62-8:72: error: failed to prove termination, possible solutions:
  - Use `have`-expressions to prove the remaining goals
  - Use `termination_by` to specify a different well-founded relation
  - Use `decreasing_by` to specify your own tactic for discharging this kind of goal
name : String
children : List TreeNode
t : TreeNode
⊢ sizeOf t < 1 + sizeOf name + sizeOf children
